$Id: ChangeLog,v 1.190 2005/04/05 17:32:46 haraldkipp Exp $

2005-04-05  Harald Kipp  <harald.kipp@egnite.de>

	* os/version.c: Updated for the next pre-release 3.9.6. Still
	no version 4, because of several problems with ARM7 (see below). 
	Anyway, most applications should now run on the ARM CPU with 
	minor or no modification.

	* include/netinet/if_ether.h, include/netinet/ip.h,
	include/netinet/tcp.h: Finally the TCP/IP stack is running on 
	the ARM7 platform. Added the 'packed' attribute to several 
	protocol structures.

	* net/ipcsum.c, include/netinet/ipcsum.h: Northern hemisphere 
	spring cleaning ;-). This part contained a lot of garbage and 
	left overs. The AVRGCC inline assembly from Liquorice seemed to 
	be buggy, the ImageCraft inline assembly didn't work better than 
	compiled code, NutIpPseudoChkSum() was never called and nothing 
	worked on 32 bit little endian machines. This whole mess had 
	been radically replaced by a generic routine. Now we have room 
	for new and clean optimizations.

	* net/tcpout.c: Inclusion of stdio header removed. These headers 
	are useful during debugging, but may cause a lot of trouble 
	later, if you forget to remove all print statements. Without the 
	stdio header file, the compiler takes care that all debug 
	outputs are removed.

	* include/sys/atom.h: NutEnter/ExitCritical for ARM7 added. 
	I missed to commit this earlier, sorry.

	* conf/dev/dev.nut, conf/net/net.nut, conf/pro/pro.nut,
	dev/ahdlcavr.c, net/pppsm.c, net/tcpsm.c, pro/dhcpc.c,
	pro/sntp.c: Configurable stack sizes. Because of larger 
	registers and memory alignment, ARM CPUs consume a lot more 
	stack.

	* include/cfg/ahdlc.h, include/cfg/ppp.h, include/cfg/sntp.h,
	include/cfg/tcp.h: Placeholders added to allow building
	in the source tree.

	* conf/dev/dev.nut, dev/ax88796.c, dev/reg_ax88796.h, 
	include/dev/ax88796.h: ARM7 Ethernet driver for Asix' AX88796 
	added. Many thanks to Marek Hummel for the initial work.
